<resources>
    <string name="app_name">opggApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">메시</string>
    <string name="nav_header_subtitle">팀이 없습니다.</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_menu_1">로그인/마이페이지</string>
    <string name="nav_menu_2">환경설정</string>

    <string name="appbar_menu_1">앱바 메뉴1</string>
    <string name="appbar_menu_2">앱바 메뉴2</string>
    <string name="appbar_menu_3">앱바 메뉴3</string>
    <string name="appbar_search">앱바 검색</string>

    <string name="tab_under_menu_1">검색</string>
    <string name="tab_under_menu_2">커뮤니티</string>
    <string name="tab_under_menu_3">챔피언</string>
    <string name="tab_under_menu_4">랭킹</string>

    <string name="fMain_raking">장인 랭킹의 정렬 기준이 다이아 2 이상 + 게임을 많이 한 순서로 변경되었습니다.</string>
    <string name="fMain_champion">장인 랭킹의 정렬 기준이 다이아 2 이상 + 게임을 많이 한 순서로 변경되었습니다.</string>
    <string name="fMain_level">OP.GG에 총 187,810명의 소환사가 있습니다.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>