<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/appbar_fragment1"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/appbar_menu_1"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/appbar_fragment2"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/appbar_menu_2"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/appbar_fragment3"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/appbar_menu_3"
        android:visible="false"
        app:showAsAction="always" />

</menu>